@@ -1,6 +1,9 @@
-EXTRA_DIST += digigr8/README.digigr8
-camlibdoc_DATA += digigr8/README.digigr8
-
+EXTRA_DIST += digigr8/README.905C
+EXTRA_DIST += digigr8/README.9050
+EXTRA_DIST += digigr8/README.913C
+camlibdoc_DATA += digigr8/README.905C
+camlibdoc_DATA += digigr8/README.9050
+camlibdoc_DATA += digigr8/README.913D
 EXTRA_LTLIBRARIES += digigr8.la
 
 digigr8_la_SOURCES = \
